--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -1,14 +1,20 @@
-#summary One-sentence summary of this page.
 #labels Reference
+<h2>Stem Reference - Version 0.7</h2>
+<p>This section contains a reference for all STEM elements, in the order that they
+appear in the stem.xml document. The class tree for the elements is shown below.</p>
+<p>Note: Click an element name in this diagram to jump to its entry in the reference
+section.</p>
+<img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324" usemap="#elementmap" />
 
-= Introduction =
+<br>
+Because the files are in XML grammar and file format, tag names are casesensitive
+and must appear exactly as shown here: <br>
 
-Add your content here.
+==<stem>===
+Syntax
+<stem>
+</stem>
 
+==Description==
+This is the root element; all other elements must be contained inside it.
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
