--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -3,7 +3,8 @@
 <p>This section contains a reference for all STEM elements, in the order that they
 appear in the stem.xml document. The class tree for the elements is shown below.</p>
 
-<img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324" usemap="#elementmap" />
+<img src="http://i1139.photobucket.com/albums/n545/blackzky8/element.png" width="549" height="324">
+
 
 <br>
 Because the files are in XML grammar and file format, tag names are casesensitive
@@ -18,3 +19,15 @@ Syntax
 
 ==Description==
 This is the root element; all other elements must be contained inside it.
+
+==<space>==
+Syntax
+{{{
+<space>
+  <background src="media/foyer.swf" x="0" y="0"> </background>
+</space>
+}}}
+
+==Description==
+The space element specifies where the interaction occurs. In a future version, this
+element might be used to define rooms and other spaces.
