Edited wiki page STEMdatafilereferencev6 through web user interface.

--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -101,7 +101,7 @@ between the vertical elements.
 normally set to 10.</li>
 
 ==Parent==
-[#myAnchor]
+[Jump to Anchor|#myAnchor]
 <h1 id="finalscore">`<finalscore>`</h1>
 Syntax
 {{{
