Edited wiki page STEMdatafilereferencev6 through web user interface.

--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -194,7 +194,15 @@ reported at the end.
 WikiWordLink
 
 <br>
-[http://domain/page label]
+[yahoo.com label]
 
 <br>
-http://domain/page
+http://yahoo.com
+
+<br>
+
+#messages
+
+<br>
+
+[#messages]
