--- a/wiki/STEMdatafilereferencev6.wiki
+++ b/wiki/STEMdatafilereferencev6.wiki
@@ -17,6 +17,7 @@ Syntax
 <stem>
 </stem>
 }}}
+{anchor:myAnchor}
 ==Description==
 This is the root element; all other elements must be contained inside it.
 
@@ -48,16 +49,10 @@ interaction. Often, this is used to place an image of a room or other space in t
 background of an interaction.
 
 ==Attributes==
-<li> *src* Is the relative path for the background. This path is relative to the stem.swf file,
-not the stem.xml file in the data folder. The file can be in any image format that
-Flash supports, e.g. .swf, .jpg, .png. Because .swf files can be used, animation,
-sound and other interactions can be added to the background.</li><br>
+  *  *src* Is the relative path for the background. This path is relative to the stem.swf file,not the stem.xml file in the data folder. The file can be in any image format that Flash supports, e.g. .swf, .jpg, .png. Because .swf files can be used, animation, sound and other interactions can be added to the background.
+  *  *x* The x position of the background. This is normally set to 0.
+  *  *y* The y position of the background. This is normally set to 0.
 
-==Attributes==
-<ul>
-<li> *x* The x position of the background. This is normally set to 0.</li>
-<li> *y* The y position of the background. This is normally set to 0.</li>
-</ul>
 
 ==Parent==
 <a href="#space">`<space>`</a>
@@ -228,3 +223,8 @@ The *interaction* element is a container element for the main elements that defi
 
 
 
+
+
+
+[#messages|messae]<br>
+[#messages messae]<br>
